build/log/idf_py_stdout_output_104904
[1/10] cmd.exe /C "cd /D C:\Users\kbutz\RTOS_ESP\main\sample\sample_project\build\esp-idf\main && C:\Espressif\python_env\idf5.2_py3.11_env\Scripts\python.exe C:/Users/kbutz/esp/v5.2.1/esp-idf/components/spiffs/spiffsgen.py 0x100000 C:/Users/kbutz/RTOS_ESP/main/sample/sample_project/partition C:/Users/kbutz/RTOS_ESP/main/sample/sample_project/build/storage.bin --page-size=256 --obj-name-len=32 --meta-len=4 --use-magic --use-magic-len"
[2/10] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D C:\Users\kbutz\RTOS_ESP\main\sample\sample_project\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.2_py3.11_env\Scripts\python.exe C:/Users/kbutz/esp/v5.2.1/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 C:/Users/kbutz/RTOS_ESP/main/sample/sample_project/build/bootloader/bootloader.bin"
Bootloader binary size 0x5230 bytes. 0x2dd0 bytes (36%) free.
[3/8] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj 
ccache C:\Espressif\tools\xtensa-esp-elf\esp-13.2.0_20230928\xtensa-esp-elf\bin\xtensa-esp32s3-elf-g++.exe -DESP_PLATFORM -DIDF_VER=\"v5.2.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/kbutz/RTOS_ESP/main/sample/sample_project/build/config -IC:/Users/kbutz/RTOS_ESP/main/sample/sample_project/main -IC:/Users/kbutz/esp/v5.2.1/esp-idf/components/newlib/platform_include -IC:/Users/kbutz/esp/v5.2.1/esp-idf/components/freertos/config/include -IC:/Users/kbutz/esp/v5.2.1/esp-idf/components/freertos/config/include/freertos -IC:/Users/kbutz/esp/v5.2.1/esp-idf/components/freertos/config/xtensa/include -IC:/Users/kbutz/esp/v5.2.1/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/Users/kbutz/esp/v5.2.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Users/kbutz/esp/v5.2.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Users/kbutz/esp/v5.2.1/esp-idf/components/freertos/esp_additions/include -IC:/Users/kbutz/esp/v5.2.1/esp-idf/components/esp_hw_support/include -IC:/Users/kbutz/esp/v5.2.1/esp-idf/components/esp_hw_support/include/soc -IC:/Users/kbutz/esp/v5.2.1/esp-idf/components/esp_hw_support/include/soc/esp32s3 -IC:/Users/kbutz/esp/v5.2.1/esp-idf/components/esp_hw_support/port/esp32s3/. -IC:/Users/kbutz/esp/v5.2.1/esp-idf/components/heap/include -IC:/Users/kbutz/esp/v5.2.1/esp-idf/components/log/include -IC:/Users/kbutz/esp/v5.2.1/esp-idf/components/soc/include -IC:/Users/kbutz/esp/v5.2.1/esp-idf/components/soc/esp32s3 -IC:/Users/kbutz/esp/v5.2.1/esp-idf/components/soc/esp32s3/include -IC:/Users/kbutz/esp/v5.2.1/esp-idf/components/hal/platform_port/include -IC:/Users/kbutz/esp/v5.2.1/esp-idf/components/hal/esp32s3/include -IC:/Users/kbutz/esp/v5.2.1/esp-idf/components/hal/include -IC:/Users/kbutz/esp/v5.2.1/esp-idf/components/esp_rom/include -IC:/Users/kbutz/esp/v5.2.1/esp-idf/components/esp_rom/include/esp32s3 -IC:/Users/kbutz/esp/v5.2.1/esp-idf/components/esp_rom/esp32s3 -IC:/Users/kbutz/esp/v5.2.1/esp-idf/components/esp_common/include -IC:/Users/kbutz/esp/v5.2.1/esp-idf/components/esp_system/include -IC:/Users/kbutz/esp/v5.2.1/esp-idf/components/esp_system/port/soc -IC:/Users/kbutz/esp/v5.2.1/esp-idf/components/esp_system/port/include/private -IC:/Users/kbutz/esp/v5.2.1/esp-idf/components/xtensa/esp32s3/include -IC:/Users/kbutz/esp/v5.2.1/esp-idf/components/xtensa/include -IC:/Users/kbutz/esp/v5.2.1/esp-idf/components/xtensa/deprecated_include -IC:/Users/kbutz/esp/v5.2.1/esp-idf/components/lwip/include -IC:/Users/kbutz/esp/v5.2.1/esp-idf/components/lwip/include/apps -IC:/Users/kbutz/esp/v5.2.1/esp-idf/components/lwip/include/apps/sntp -IC:/Users/kbutz/esp/v5.2.1/esp-idf/components/lwip/lwip/src/include -IC:/Users/kbutz/esp/v5.2.1/esp-idf/components/lwip/port/include -IC:/Users/kbutz/esp/v5.2.1/esp-idf/components/lwip/port/freertos/include -IC:/Users/kbutz/esp/v5.2.1/esp-idf/components/lwip/port/esp32xx/include -IC:/Users/kbutz/esp/v5.2.1/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/Users/kbutz/esp/v5.2.1/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/Users/kbutz/esp/v5.2.1/esp-idf/components/spiffs/include -IC:/Users/kbutz/esp/v5.2.1/esp-idf/components/esp_partition/include -mlongcalls  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Users/kbutz/RTOS_ESP/main/sample/sample_project=. -fmacro-prefix-map=C:/Users/kbutz/esp/v5.2.1/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fno-exceptions -fno-rtti -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\main.cpp.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj -c C:/Users/kbutz/RTOS_ESP/main/sample/sample_project/main/main.cpp
C:/Users/kbutz/RTOS_ESP/main/sample/sample_project/main/main.cpp: In function 'void benchmark(void*)':
C:/Users/kbutz/RTOS_ESP/main/sample/sample_project/main/main.cpp:96:67: error: for increment expression has no effect [-Werror=unused-value]
   96 |         for(int testDataLine = 1; testDataLine < 21; testDataLine + 10) {
      |                                                      ~~~~~~~~~~~~~^~~~
C:/Users/kbutz/RTOS_ESP/main/sample/sample_project/main/main.cpp:98:29: warning: unused variable 'taskParams' [-Wunused-variable]
   98 |                 TaskParams *taskParams = static_cast<TaskParams*>(params);
      |                             ^~~~~~~~~~
C:/Users/kbutz/RTOS_ESP/main/sample/sample_project/main/main.cpp:134:11: error: redeclaration of 'float accuracy'
  134 |     float accuracy = static_cast<float>(summedUpMatches) / xSize * 100.f;
      |           ^~~~~~~~
C:/Users/kbutz/RTOS_ESP/main/sample/sample_project/main/main.cpp:95:15: note: 'float accuracy' previously declared here
   95 |         float accuracy;
      |               ^~~~~~~~
C:/Users/kbutz/RTOS_ESP/main/sample/sample_project/main/main.cpp: In function 'void app_main()':
C:/Users/kbutz/RTOS_ESP/main/sample/sample_project/main/main.cpp:164:128: error: 'data' was not declared in this scope
  164 |     auto runtime = static_cast<float>(std::chrono::duration_cast<std::chrono::milliseconds>(end-start).count()) / (std::get<0>(data).size() * repeat);
      |                                                                                                                                ^~~~
C:/Users/kbutz/RTOS_ESP/main/sample/sample_project/main/main.cpp:164:128: note: suggested alternatives:
In file included from C:/Espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/xtensa-esp-elf/include/c++/13.2.0/string:53,
                 from C:/Espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/xtensa-esp-elf/include/c++/13.2.0/bits/locale_classes.h:40,
                 from C:/Espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/xtensa-esp-elf/include/c++/13.2.0/bits/ios_base.h:41,
                 from C:/Espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/xtensa-esp-elf/include/c++/13.2.0/ios:44,
                 from C:/Espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/xtensa-esp-elf/include/c++/13.2.0/ostream:40,
                 from C:/Espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/xtensa-esp-elf/include/c++/13.2.0/iostream:41,
                 from C:/Users/kbutz/RTOS_ESP/main/sample/sample_project/main/main.cpp:3:
C:/Espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/xtensa-esp-elf/include/c++/13.2.0/bits/range_access.h:346:5: note:   'std::data'
  346 |     data(initializer_list<_Tp> __il) noexcept
      |     ^~~~
In file included from C:/Espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/xtensa-esp-elf/include/c++/13.2.0/string_view:48,
                 from C:/Espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/xtensa-esp-elf/include/c++/13.2.0/bits/basic_string.h:47,
                 from C:/Espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/xtensa-esp-elf/include/c++/13.2.0/string:54:
C:/Espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/xtensa-esp-elf/include/c++/13.2.0/bits/ranges_base.h:496:43: note:   'std::ranges::__cust::data'
  496 |     inline constexpr __cust_access::_Data data{};
      |                                           ^~~~
cc1plus.exe: some warnings being treated as errors
ninja: build stopped: subcommand failed.
